0.91.0	UNRELEASED

 UI

  * Added keyboard shortcuts for closing windows and exiting Olive.
    (#139559, Daniel Schierbeck)
 
 BUG FIXES

  * Fix the "Complete Diff" entry in DiffWindow to show the whole diff.
    (#140512, James Westby) 
 
 INTERNALS
 
  * `bzr viz --limit` much more faster than before. (John Arbash Meinel)

0.90.0	2007-08-27

 FEATURES

  * Add ability to hide ignored files in Olive (#134121, Tom Badran)

  * Show tags in bzr viz. (Jelmer)

  * Handle large files correctly in Olive. (#127392, Mateusz Korniak)

  * Add remove and delete menu item in Olive. (#127381, Mateusz Korniak)
  
  * Added "update" menu item in Olive. (Mateusz Korniak)
  
  * New Olive application icon. (Simon Pascal Klein and Jakub Steiner)
  
  * Show bzr viz interface quickly. (Gary van der Merwe)

 UI
  
  * Improve Preferences dialog layout. (Jelmer)

 INTERNALS:
 
  * Updated pot generator script and regenerated the translation template.
    (Szilveszter)

  * Add helper widget for selecting branches (Jelmer)
    
 BUG FIXES
 
  * Support DBus being present but NetworkManager missing. (#126767, Mateusz
  Korniak, Jelmer)

  * Fixed interface to push.PushDialog (Mateusz Korniak)

  * Fix so the when Olive is run from the source code, the toolbar and menu
    icons show. (Gary van der Merwe, #131520)

  * Fix a regression that Olive was no longer able to find bzrlib location
    due to a change in the output of "bzr version". (Gary van der Merwe)

  * Fix a regression that Olive branch info window was not working. (Gary van
    der Merwe)
    
  * Fixed tags formatting. (Aaron)

0.18.0  2007-07-17

 FEATURES

  * Add support for customizing colors in the diff window via ~/.colordiffrc
    or gedit's syntax highlighting configuration. See README file for details.
    (Adeodato Simó)

  * Add Inspect and Branch buttons to notification window. (Robert)

  * Add notification area icon with context menu. (Jelmer)

  * New tango icons. (Pascal Klein)
